[metadata]
name = gias3.applications
version = attr: src.gias3.applications.__version__
description = Application modules for GIAS3
long_description = file: README.rst, LICENSE.rst
keywords = musculoskeletal, modelling
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
namespace_packages = gias3
package_dir =
    =src
packages = find:
install_requires =
    gias3.common
    gias3.fieldwork
    gias3.image_analysis
    gias3.mesh
    gias3.registration
    gias3.visualisation

[options.entry_points]
console_scripts =
        gias-rbfreg = gias3.applications.giasrbfreg:main
        gias-rigidreg = gias3.applications.giasrigidreg:main
        gias-pcreg = gias3.applications.giaspcreg:main
        gias-trainpcashapemodel = gias3.applications.giastrainpcashapemodel:main
        gias-surfacedistance = gias3.applications.giassurfacedistance:main
        gias-hmfinp2surf = gias3.applications.giashmfinp2surf:main
        gias-inpsampledicom = gias3.applications.giasinpsampledicom:main

[options.packages.find]
where = src
